--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   }
 }
