--- a/sample.env
+++ b/sample.env
@@ -6,3 +6,6 @@ DB_HOST=localhost
 DB_PORT=3306
 ENVIROMENT=development
 SECRET=hereGoesYourJwtSecret
+FRONTPATH=http://localhost:3000
+SENDGRID_API_KEY=
+EMAIL_SENDER=
